--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 cp --recursive ./build s3://wesleyportfolio.com"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,13 +56,12 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Wesley16838/PriCov.git"
+    "url": "git+https://github.com/Wesley16838/portfolio.git"
   },
   "author": "Wei-Hsuan,Wong",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Wesley16838/PriCov/issues"
+    "url": "https://github.com/Wesley16838/portfolio/issues"
   },
-  "homepage": "https://github.com/Wesley16838/PriCov#readme",
-  "proxy": "http://pricovbackend.herokuapp.com"
+  "homepage": "https://github.com/Wesley16838/portfolio#readme"
 }
